applications/azure-cni-network-policies/busybox_deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  containers:
  - image: busybox
    command: ['sh','-c','wget -qO- --timeout=5 http://nginx; sleep 3600']
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
