applications/azure-cni-network-policies/network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: azure-cni
spec:
  podSelector:
    matchLabels:
      role: nginx
  ingress: []
